lib/parser.automaton
State 0:
## Known stack suffix:
##
## LR(1) items:
parseCommand' -> . parseCommand [ # ]
## Transitions:
-- On MATCH shift to state 1
-- On LSQUARE shift to state 2
-- On LPAREN shift to state 3
-- On LOWER_IDENT shift to state 4
-- On LET shift to state 96
-- On INT shift to state 10
-- On IF shift to state 11
-- On FUN shift to state 12
-- On BOOL shift to state 15
-- On parseCommand shift to state 107
-- On expression shift to state 108
-- On expr3 shift to state 17
-- On expr2 shift to state 18
-- On expr1 shift to state 20
## Reductions:

State 1:
## Known stack suffix:
## MATCH
## LR(1) items:
expression -> MATCH . expression WITH option(PIPE) loption(separated_nonempty_list(PIPE,matchBranch)) END [ WITH THEN SEMI RSQUARE RPAREN PIPE IN EOF END ELSE DOUBLE_SEMI COMMA ]
## Transitions:
-- On MATCH shift to state 1
-- On LSQUARE shift to state 2
-- On LPAREN shift to state 3
-- On LOWER_IDENT shift to state 4
-- On LET shift to state 5
-- On INT shift to state 10
-- On IF shift to state 11
-- On FUN shift to state 12
-- On BOOL shift to state 15
-- On expression shift to state 62
-- On expr3 shift to state 17
-- On expr2 shift to state 18
-- On expr1 shift to state 20
## Reductions:

State 2:
## Known stack suffix:
## LSQUARE
## LR(1) items:
expr3 -> LSQUARE . loption(separated_nonempty_list(SEMI,expression)) RSQUARE [ WITH THEN SUB SEMI RSQUARE RPAREN PIPE MUL LT LSQUARE LPAREN LOWER_IDENT INT IN EQ EOF END ELSE DOUBLE_SEMI DOUBLE_COLON DIV COMMA BOOL ADD ]
## Transitions:
-- On MATCH shift to state 1
-- On LSQUARE shift to state 2
-- On LPAREN shift to state 3
-- On LOWER_IDENT shift to state 4
-- On LET shift to state 5
-- On INT shift to state 10
-- On IF shift to state 11
-- On FUN shift to state 12
-- On BOOL shift to state 15
-- On separated_nonempty_list(SEMI,expression) shift to state 56
-- On loption(separated_nonempty_list(SEMI,expression)) shift to state 57
-- On expression shift to state 59
-- On expr3 shift to state 17
-- On expr2 shift to state 18
-- On expr1 shift to state 20
## Reductions:
-- On RSQUARE
--   reduce production loption(separated_nonempty_list(SEMI,expression)) ->

State 3:
## Known stack suffix:
## LPAREN
## LR(1) items:
expr3 -> LPAREN . expression RPAREN [ WITH THEN SUB SEMI RSQUARE RPAREN PIPE MUL LT LSQUARE LPAREN LOWER_IDENT INT IN EQ EOF END ELSE DOUBLE_SEMI DOUBLE_COLON DIV COMMA BOOL ADD ]
expr3 -> LPAREN . expression COMMA separated_nonempty_list(COMMA,expression) RPAREN [ WITH THEN SUB SEMI RSQUARE RPAREN PIPE MUL LT LSQUARE LPAREN LOWER_IDENT INT IN EQ EOF END ELSE DOUBLE_SEMI DOUBLE_COLON DIV COMMA BOOL ADD ]
## Transitions:
-- On MATCH shift to state 1
-- On LSQUARE shift to state 2
-- On LPAREN shift to state 3
-- On LOWER_IDENT shift to state 4
-- On LET shift to state 5
-- On INT shift to state 10
-- On IF shift to state 11
-- On FUN shift to state 12
-- On BOOL shift to state 15
-- On expression shift to state 48
-- On expr3 shift to state 17
-- On expr2 shift to state 18
-- On expr1 shift to state 20
## Reductions:

State 4:
## Known stack suffix:
## LOWER_IDENT
## LR(1) items:
expr3 -> LOWER_IDENT . [ WITH THEN SUB SEMI RSQUARE RPAREN PIPE MUL LT LSQUARE LPAREN LOWER_IDENT INT IN EQ EOF END ELSE DOUBLE_SEMI DOUBLE_COLON DIV COMMA BOOL ADD ]
## Transitions:
## Reductions:
-- On WITH THEN SUB SEMI RSQUARE RPAREN PIPE MUL LT LSQUARE LPAREN LOWER_IDENT INT IN EQ EOF END ELSE DOUBLE_SEMI DOUBLE_COLON DIV COMMA BOOL ADD
--   reduce production expr3 -> LOWER_IDENT

State 5:
## Known stack suffix:
## LET
## LR(1) items:
expression -> LET . LOWER_IDENT EQ expression IN expression [ WITH THEN SEMI RSQUARE RPAREN PIPE IN EOF END ELSE DOUBLE_SEMI COMMA ]
expression -> LET . REC LOWER_IDENT LOWER_IDENT EQ expression IN expression [ WITH THEN SEMI RSQUARE RPAREN PIPE IN EOF END ELSE DOUBLE_SEMI COMMA ]
## Transitions:
-- On REC shift to state 6
-- On LOWER_IDENT shift to state 43
## Reductions:

State 6:
## Known stack suffix:
## LET REC
## LR(1) items:
expression -> LET REC . LOWER_IDENT LOWER_IDENT EQ expression IN expression [ WITH THEN SEMI RSQUARE RPAREN PIPE IN EOF END ELSE DOUBLE_SEMI COMMA ]
## Transitions:
-- On LOWER_IDENT shift to state 7
## Reductions:

State 7:
## Known stack suffix:
## LET REC LOWER_IDENT
## LR(1) items:
expression -> LET REC LOWER_IDENT . LOWER_IDENT EQ expression IN expression [ WITH THEN SEMI RSQUARE RPAREN PIPE IN EOF END ELSE DOUBLE_SEMI COMMA ]
## Transitions:
-- On LOWER_IDENT shift to state 8
## Reductions:

State 8:
## Known stack suffix:
## LET REC LOWER_IDENT LOWER_IDENT
## LR(1) items:
expression -> LET REC LOWER_IDENT LOWER_IDENT . EQ expression IN expression [ WITH THEN SEMI RSQUARE RPAREN PIPE IN EOF END ELSE DOUBLE_SEMI COMMA ]
## Transitions:
-- On EQ shift to state 9
## Reductions:

State 9:
## Known stack suffix:
## LET REC LOWER_IDENT LOWER_IDENT EQ
## LR(1) items:
expression -> LET REC LOWER_IDENT LOWER_IDENT EQ . expression IN expression [ WITH THEN SEMI RSQUARE RPAREN PIPE IN EOF END ELSE DOUBLE_SEMI COMMA ]
## Transitions:
-- On MATCH shift to state 1
-- On LSQUARE shift to state 2
-- On LPAREN shift to state 3
-- On LOWER_IDENT shift to state 4
-- On LET shift to state 5
-- On INT shift to state 10
-- On IF shift to state 11
-- On FUN shift to state 12
-- On BOOL shift to state 15
-- On expression shift to state 40
-- On expr3 shift to state 17
-- On expr2 shift to state 18
-- On expr1 shift to state 20
## Reductions:

State 10:
## Known stack suffix:
## INT
## LR(1) items:
expr3 -> INT . [ WITH THEN SUB SEMI RSQUARE RPAREN PIPE MUL LT LSQUARE LPAREN LOWER_IDENT INT IN EQ EOF END ELSE DOUBLE_SEMI DOUBLE_COLON DIV COMMA BOOL ADD ]
## Transitions:
## Reductions:
-- On WITH THEN SUB SEMI RSQUARE RPAREN PIPE MUL LT LSQUARE LPAREN LOWER_IDENT INT IN EQ EOF END ELSE DOUBLE_SEMI DOUBLE_COLON DIV COMMA BOOL ADD
--   reduce production expr3 -> INT

State 11:
## Known stack suffix:
## IF
## LR(1) items:
expression -> IF . expression THEN expression ELSE expression [ WITH THEN SEMI RSQUARE RPAREN PIPE IN EOF END ELSE DOUBLE_SEMI COMMA ]
## Transitions:
-- On MATCH shift to state 1
-- On LSQUARE shift to state 2
-- On LPAREN shift to state 3
-- On LOWER_IDENT shift to state 4
-- On LET shift to state 5
-- On INT shift to state 10
-- On IF shift to state 11
-- On FUN shift to state 12
-- On BOOL shift to state 15
-- On expression shift to state 35
-- On expr3 shift to state 17
-- On expr2 shift to state 18
-- On expr1 shift to state 20
## Reductions:

State 12:
## Known stack suffix:
## FUN
## LR(1) items:
expression -> FUN . LOWER_IDENT RIGHT_ARROW expression [ WITH THEN SEMI RSQUARE RPAREN PIPE IN EOF END ELSE DOUBLE_SEMI COMMA ]
## Transitions:
-- On LOWER_IDENT shift to state 13
## Reductions:

State 13:
## Known stack suffix:
## FUN LOWER_IDENT
## LR(1) items:
expression -> FUN LOWER_IDENT . RIGHT_ARROW expression [ WITH THEN SEMI RSQUARE RPAREN PIPE IN EOF END ELSE DOUBLE_SEMI COMMA ]
## Transitions:
-- On RIGHT_ARROW shift to state 14
## Reductions:

State 14:
## Known stack suffix:
## FUN LOWER_IDENT RIGHT_ARROW
## LR(1) items:
expression -> FUN LOWER_IDENT RIGHT_ARROW . expression [ WITH THEN SEMI RSQUARE RPAREN PIPE IN EOF END ELSE DOUBLE_SEMI COMMA ]
## Transitions:
-- On MATCH shift to state 1
-- On LSQUARE shift to state 2
-- On LPAREN shift to state 3
-- On LOWER_IDENT shift to state 4
-- On LET shift to state 5
-- On INT shift to state 10
-- On IF shift to state 11
-- On FUN shift to state 12
-- On BOOL shift to state 15
-- On expression shift to state 16
-- On expr3 shift to state 17
-- On expr2 shift to state 18
-- On expr1 shift to state 20
## Reductions:

State 15:
## Known stack suffix:
## BOOL
## LR(1) items:
expr3 -> BOOL . [ WITH THEN SUB SEMI RSQUARE RPAREN PIPE MUL LT LSQUARE LPAREN LOWER_IDENT INT IN EQ EOF END ELSE DOUBLE_SEMI DOUBLE_COLON DIV COMMA BOOL ADD ]
## Transitions:
## Reductions:
-- On WITH THEN SUB SEMI RSQUARE RPAREN PIPE MUL LT LSQUARE LPAREN LOWER_IDENT INT IN EQ EOF END ELSE DOUBLE_SEMI DOUBLE_COLON DIV COMMA BOOL ADD
--   reduce production expr3 -> BOOL

State 16:
## Known stack suffix:
## FUN LOWER_IDENT RIGHT_ARROW expression
## LR(1) items:
expression -> FUN LOWER_IDENT RIGHT_ARROW expression . [ WITH THEN SEMI RSQUARE RPAREN PIPE IN EOF END ELSE DOUBLE_SEMI COMMA ]
## Transitions:
## Reductions:
-- On WITH THEN SEMI RSQUARE RPAREN PIPE IN EOF END ELSE DOUBLE_SEMI COMMA
--   reduce production expression -> FUN LOWER_IDENT RIGHT_ARROW expression

State 17:
## Known stack suffix:
## expr3
## LR(1) items:
expr2 -> expr3 . [ WITH THEN SUB SEMI RSQUARE RPAREN PIPE MUL LT LSQUARE LPAREN LOWER_IDENT INT IN EQ EOF END ELSE DOUBLE_SEMI DOUBLE_COLON DIV COMMA BOOL ADD ]
## Transitions:
## Reductions:
-- On WITH THEN SUB SEMI RSQUARE RPAREN PIPE MUL LT LSQUARE LPAREN LOWER_IDENT INT IN EQ EOF END ELSE DOUBLE_SEMI DOUBLE_COLON DIV COMMA BOOL ADD
--   reduce production expr2 -> expr3

State 18:
## Known stack suffix:
## expr2
## LR(1) items:
expr1 -> expr2 . [ WITH THEN SUB SEMI RSQUARE RPAREN PIPE MUL LT IN EQ EOF END ELSE DOUBLE_SEMI DOUBLE_COLON DIV COMMA ADD ]
expr2 -> expr2 . expr3 [ WITH THEN SUB SEMI RSQUARE RPAREN PIPE MUL LT LSQUARE LPAREN LOWER_IDENT INT IN EQ EOF END ELSE DOUBLE_SEMI DOUBLE_COLON DIV COMMA BOOL ADD ]
## Transitions:
-- On LSQUARE shift to state 2
-- On LPAREN shift to state 3
-- On LOWER_IDENT shift to state 4
-- On INT shift to state 10
-- On BOOL shift to state 15
-- On expr3 shift to state 19
## Reductions:
-- On WITH THEN SUB SEMI RSQUARE RPAREN PIPE MUL LT IN EQ EOF END ELSE DOUBLE_SEMI DOUBLE_COLON DIV COMMA ADD
--   reduce production expr1 -> expr2

State 19:
## Known stack suffix:
## expr2 expr3
## LR(1) items:
expr2 -> expr2 expr3 . [ WITH THEN SUB SEMI RSQUARE RPAREN PIPE MUL LT LSQUARE LPAREN LOWER_IDENT INT IN EQ EOF END ELSE DOUBLE_SEMI DOUBLE_COLON DIV COMMA BOOL ADD ]
## Transitions:
## Reductions:
-- On WITH THEN SUB SEMI RSQUARE RPAREN PIPE MUL LT LSQUARE LPAREN LOWER_IDENT INT IN EQ EOF END ELSE DOUBLE_SEMI DOUBLE_COLON DIV COMMA BOOL ADD
--   reduce production expr2 -> expr2 expr3

State 20:
## Known stack suffix:
## expr1
## LR(1) items:
expr1 -> expr1 . ADD expr1 [ WITH THEN SUB SEMI RSQUARE RPAREN PIPE MUL LT IN EQ EOF END ELSE DOUBLE_SEMI DOUBLE_COLON DIV COMMA ADD ]
expr1 -> expr1 . SUB expr1 [ WITH THEN SUB SEMI RSQUARE RPAREN PIPE MUL LT IN EQ EOF END ELSE DOUBLE_SEMI DOUBLE_COLON DIV COMMA ADD ]
expr1 -> expr1 . MUL expr1 [ WITH THEN SUB SEMI RSQUARE RPAREN PIPE MUL LT IN EQ EOF END ELSE DOUBLE_SEMI DOUBLE_COLON DIV COMMA ADD ]
expr1 -> expr1 . DIV expr1 [ WITH THEN SUB SEMI RSQUARE RPAREN PIPE MUL LT IN EQ EOF END ELSE DOUBLE_SEMI DOUBLE_COLON DIV COMMA ADD ]
expr1 -> expr1 . EQ expr1 [ WITH THEN SUB SEMI RSQUARE RPAREN PIPE MUL LT IN EQ EOF END ELSE DOUBLE_SEMI DOUBLE_COLON DIV COMMA ADD ]
expr1 -> expr1 . LT expr1 [ WITH THEN SUB SEMI RSQUARE RPAREN PIPE MUL LT IN EQ EOF END ELSE DOUBLE_SEMI DOUBLE_COLON DIV COMMA ADD ]
expr1 -> expr1 . DOUBLE_COLON expr1 [ WITH THEN SUB SEMI RSQUARE RPAREN PIPE MUL LT IN EQ EOF END ELSE DOUBLE_SEMI DOUBLE_COLON DIV COMMA ADD ]
expression -> expr1 . [ WITH THEN SEMI RSQUARE RPAREN PIPE IN EOF END ELSE DOUBLE_SEMI COMMA ]
## Transitions:
-- On SUB shift to state 21
-- On MUL shift to state 23
-- On LT shift to state 27
-- On EQ shift to state 33
-- On DOUBLE_COLON shift to state 29
-- On DIV shift to state 25
-- On ADD shift to state 31
## Reductions:
-- On WITH THEN SEMI RSQUARE RPAREN PIPE IN EOF END ELSE DOUBLE_SEMI COMMA
--   reduce production expression -> expr1

State 21:
## Known stack suffix:
## expr1 SUB
## LR(1) items:
expr1 -> expr1 SUB . expr1 [ WITH THEN SUB SEMI RSQUARE RPAREN PIPE MUL LT IN EQ EOF END ELSE DOUBLE_SEMI DOUBLE_COLON DIV COMMA ADD ]
## Transitions:
-- On LSQUARE shift to state 2
-- On LPAREN shift to state 3
-- On LOWER_IDENT shift to state 4
-- On INT shift to state 10
-- On BOOL shift to state 15
-- On expr3 shift to state 17
-- On expr2 shift to state 18
-- On expr1 shift to state 22
## Reductions:

State 22:
## Known stack suffix:
## expr1 SUB expr1
## LR(1) items:
expr1 -> expr1 . ADD expr1 [ WITH THEN SUB SEMI RSQUARE RPAREN PIPE MUL LT IN EQ EOF END ELSE DOUBLE_SEMI DOUBLE_COLON DIV COMMA ADD ]
expr1 -> expr1 . SUB expr1 [ WITH THEN SUB SEMI RSQUARE RPAREN PIPE MUL LT IN EQ EOF END ELSE DOUBLE_SEMI DOUBLE_COLON DIV COMMA ADD ]
expr1 -> expr1 SUB expr1 . [ WITH THEN SUB SEMI RSQUARE RPAREN PIPE MUL LT IN EQ EOF END ELSE DOUBLE_SEMI DOUBLE_COLON DIV COMMA ADD ]
expr1 -> expr1 . MUL expr1 [ WITH THEN SUB SEMI RSQUARE RPAREN PIPE MUL LT IN EQ EOF END ELSE DOUBLE_SEMI DOUBLE_COLON DIV COMMA ADD ]
expr1 -> expr1 . DIV expr1 [ WITH THEN SUB SEMI RSQUARE RPAREN PIPE MUL LT IN EQ EOF END ELSE DOUBLE_SEMI DOUBLE_COLON DIV COMMA ADD ]
expr1 -> expr1 . EQ expr1 [ WITH THEN SUB SEMI RSQUARE RPAREN PIPE MUL LT IN EQ EOF END ELSE DOUBLE_SEMI DOUBLE_COLON DIV COMMA ADD ]
expr1 -> expr1 . LT expr1 [ WITH THEN SUB SEMI RSQUARE RPAREN PIPE MUL LT IN EQ EOF END ELSE DOUBLE_SEMI DOUBLE_COLON DIV COMMA ADD ]
expr1 -> expr1 . DOUBLE_COLON expr1 [ WITH THEN SUB SEMI RSQUARE RPAREN PIPE MUL LT IN EQ EOF END ELSE DOUBLE_SEMI DOUBLE_COLON DIV COMMA ADD ]
## Transitions:
-- On MUL shift to state 23
-- On DIV shift to state 25
## Reductions:
-- On WITH THEN SUB SEMI RSQUARE RPAREN PIPE LT IN EQ EOF END ELSE DOUBLE_SEMI DOUBLE_COLON COMMA ADD
--   reduce production expr1 -> expr1 SUB expr1

State 23:
## Known stack suffix:
## expr1 MUL
## LR(1) items:
expr1 -> expr1 MUL . expr1 [ WITH THEN SUB SEMI RSQUARE RPAREN PIPE MUL LT IN EQ EOF END ELSE DOUBLE_SEMI DOUBLE_COLON DIV COMMA ADD ]
## Transitions:
-- On LSQUARE shift to state 2
-- On LPAREN shift to state 3
-- On LOWER_IDENT shift to state 4
-- On INT shift to state 10
-- On BOOL shift to state 15
-- On expr3 shift to state 17
-- On expr2 shift to state 18
-- On expr1 shift to state 24
## Reductions:

State 24:
## Known stack suffix:
## expr1 MUL expr1
## LR(1) items:
expr1 -> expr1 . ADD expr1 [ WITH THEN SUB SEMI RSQUARE RPAREN PIPE MUL LT IN EQ EOF END ELSE DOUBLE_SEMI DOUBLE_COLON DIV COMMA ADD ]
expr1 -> expr1 . SUB expr1 [ WITH THEN SUB SEMI RSQUARE RPAREN PIPE MUL LT IN EQ EOF END ELSE DOUBLE_SEMI DOUBLE_COLON DIV COMMA ADD ]
expr1 -> expr1 . MUL expr1 [ WITH THEN SUB SEMI RSQUARE RPAREN PIPE MUL LT IN EQ EOF END ELSE DOUBLE_SEMI DOUBLE_COLON DIV COMMA ADD ]
expr1 -> expr1 MUL expr1 . [ WITH THEN SUB SEMI RSQUARE RPAREN PIPE MUL LT IN EQ EOF END ELSE DOUBLE_SEMI DOUBLE_COLON DIV COMMA ADD ]
expr1 -> expr1 . DIV expr1 [ WITH THEN SUB SEMI RSQUARE RPAREN PIPE MUL LT IN EQ EOF END ELSE DOUBLE_SEMI DOUBLE_COLON DIV COMMA ADD ]
expr1 -> expr1 . EQ expr1 [ WITH THEN SUB SEMI RSQUARE RPAREN PIPE MUL LT IN EQ EOF END ELSE DOUBLE_SEMI DOUBLE_COLON DIV COMMA ADD ]
expr1 -> expr1 . LT expr1 [ WITH THEN SUB SEMI RSQUARE RPAREN PIPE MUL LT IN EQ EOF END ELSE DOUBLE_SEMI DOUBLE_COLON DIV COMMA ADD ]
expr1 -> expr1 . DOUBLE_COLON expr1 [ WITH THEN SUB SEMI RSQUARE RPAREN PIPE MUL LT IN EQ EOF END ELSE DOUBLE_SEMI DOUBLE_COLON DIV COMMA ADD ]
## Transitions:
## Reductions:
-- On WITH THEN SUB SEMI RSQUARE RPAREN PIPE MUL LT IN EQ EOF END ELSE DOUBLE_SEMI DOUBLE_COLON DIV COMMA ADD
--   reduce production expr1 -> expr1 MUL expr1

State 25:
## Known stack suffix:
## expr1 DIV
## LR(1) items:
expr1 -> expr1 DIV . expr1 [ WITH THEN SUB SEMI RSQUARE RPAREN PIPE MUL LT IN EQ EOF END ELSE DOUBLE_SEMI DOUBLE_COLON DIV COMMA ADD ]
## Transitions:
-- On LSQUARE shift to state 2
-- On LPAREN shift to state 3
-- On LOWER_IDENT shift to state 4
-- On INT shift to state 10
-- On BOOL shift to state 15
-- On expr3 shift to state 17
-- On expr2 shift to state 18
-- On expr1 shift to state 26
## Reductions:

State 26:
## Known stack suffix:
## expr1 DIV expr1
## LR(1) items:
expr1 -> expr1 . ADD expr1 [ WITH THEN SUB SEMI RSQUARE RPAREN PIPE MUL LT IN EQ EOF END ELSE DOUBLE_SEMI DOUBLE_COLON DIV COMMA ADD ]
expr1 -> expr1 . SUB expr1 [ WITH THEN SUB SEMI RSQUARE RPAREN PIPE MUL LT IN EQ EOF END ELSE DOUBLE_SEMI DOUBLE_COLON DIV COMMA ADD ]
expr1 -> expr1 . MUL expr1 [ WITH THEN SUB SEMI RSQUARE RPAREN PIPE MUL LT IN EQ EOF END ELSE DOUBLE_SEMI DOUBLE_COLON DIV COMMA ADD ]
expr1 -> expr1 . DIV expr1 [ WITH THEN SUB SEMI RSQUARE RPAREN PIPE MUL LT IN EQ EOF END ELSE DOUBLE_SEMI DOUBLE_COLON DIV COMMA ADD ]
expr1 -> expr1 DIV expr1 . [ WITH THEN SUB SEMI RSQUARE RPAREN PIPE MUL LT IN EQ EOF END ELSE DOUBLE_SEMI DOUBLE_COLON DIV COMMA ADD ]
expr1 -> expr1 . EQ expr1 [ WITH THEN SUB SEMI RSQUARE RPAREN PIPE MUL LT IN EQ EOF END ELSE DOUBLE_SEMI DOUBLE_COLON DIV COMMA ADD ]
expr1 -> expr1 . LT expr1 [ WITH THEN SUB SEMI RSQUARE RPAREN PIPE MUL LT IN EQ EOF END ELSE DOUBLE_SEMI DOUBLE_COLON DIV COMMA ADD ]
expr1 -> expr1 . DOUBLE_COLON expr1 [ WITH THEN SUB SEMI RSQUARE RPAREN PIPE MUL LT IN EQ EOF END ELSE DOUBLE_SEMI DOUBLE_COLON DIV COMMA ADD ]
## Transitions:
## Reductions:
-- On WITH THEN SUB SEMI RSQUARE RPAREN PIPE MUL LT IN EQ EOF END ELSE DOUBLE_SEMI DOUBLE_COLON DIV COMMA ADD
--   reduce production expr1 -> expr1 DIV expr1

State 27:
## Known stack suffix:
## expr1 LT
## LR(1) items:
expr1 -> expr1 LT . expr1 [ WITH THEN SUB SEMI RSQUARE RPAREN PIPE MUL LT IN EQ EOF END ELSE DOUBLE_SEMI DOUBLE_COLON DIV COMMA ADD ]
## Transitions:
-- On LSQUARE shift to state 2
-- On LPAREN shift to state 3
-- On LOWER_IDENT shift to state 4
-- On INT shift to state 10
-- On BOOL shift to state 15
-- On expr3 shift to state 17
-- On expr2 shift to state 18
-- On expr1 shift to state 28
## Reductions:

State 28:
## Known stack suffix:
## expr1 LT expr1
## LR(1) items:
expr1 -> expr1 . ADD expr1 [ WITH THEN SUB SEMI RSQUARE RPAREN PIPE MUL LT IN EQ EOF END ELSE DOUBLE_SEMI DOUBLE_COLON DIV COMMA ADD ]
expr1 -> expr1 . SUB expr1 [ WITH THEN SUB SEMI RSQUARE RPAREN PIPE MUL LT IN EQ EOF END ELSE DOUBLE_SEMI DOUBLE_COLON DIV COMMA ADD ]
expr1 -> expr1 . MUL expr1 [ WITH THEN SUB SEMI RSQUARE RPAREN PIPE MUL LT IN EQ EOF END ELSE DOUBLE_SEMI DOUBLE_COLON DIV COMMA ADD ]
expr1 -> expr1 . DIV expr1 [ WITH THEN SUB SEMI RSQUARE RPAREN PIPE MUL LT IN EQ EOF END ELSE DOUBLE_SEMI DOUBLE_COLON DIV COMMA ADD ]
expr1 -> expr1 . EQ expr1 [ WITH THEN SUB SEMI RSQUARE RPAREN PIPE MUL LT IN EQ EOF END ELSE DOUBLE_SEMI DOUBLE_COLON DIV COMMA ADD ]
expr1 -> expr1 . LT expr1 [ WITH THEN SUB SEMI RSQUARE RPAREN PIPE MUL LT IN EQ EOF END ELSE DOUBLE_SEMI DOUBLE_COLON DIV COMMA ADD ]
expr1 -> expr1 LT expr1 . [ WITH THEN SUB SEMI RSQUARE RPAREN PIPE MUL LT IN EQ EOF END ELSE DOUBLE_SEMI DOUBLE_COLON DIV COMMA ADD ]
expr1 -> expr1 . DOUBLE_COLON expr1 [ WITH THEN SUB SEMI RSQUARE RPAREN PIPE MUL LT IN EQ EOF END ELSE DOUBLE_SEMI DOUBLE_COLON DIV COMMA ADD ]
## Transitions:
-- On SUB shift to state 21
-- On MUL shift to state 23
-- On DOUBLE_COLON shift to state 29
-- On DIV shift to state 25
-- On ADD shift to state 31
## Reductions:
-- On WITH THEN SEMI RSQUARE RPAREN PIPE IN EOF END ELSE DOUBLE_SEMI COMMA
--   reduce production expr1 -> expr1 LT expr1

State 29:
## Known stack suffix:
## expr1 DOUBLE_COLON
## LR(1) items:
expr1 -> expr1 DOUBLE_COLON . expr1 [ WITH THEN SUB SEMI RSQUARE RPAREN PIPE MUL LT IN EQ EOF END ELSE DOUBLE_SEMI DOUBLE_COLON DIV COMMA ADD ]
## Transitions:
-- On LSQUARE shift to state 2
-- On LPAREN shift to state 3
-- On LOWER_IDENT shift to state 4
-- On INT shift to state 10
-- On BOOL shift to state 15
-- On expr3 shift to state 17
-- On expr2 shift to state 18
-- On expr1 shift to state 30
## Reductions:

State 30:
## Known stack suffix:
## expr1 DOUBLE_COLON expr1
## LR(1) items:
expr1 -> expr1 . ADD expr1 [ WITH THEN SUB SEMI RSQUARE RPAREN PIPE MUL LT IN EQ EOF END ELSE DOUBLE_SEMI DOUBLE_COLON DIV COMMA ADD ]
expr1 -> expr1 . SUB expr1 [ WITH THEN SUB SEMI RSQUARE RPAREN PIPE MUL LT IN EQ EOF END ELSE DOUBLE_SEMI DOUBLE_COLON DIV COMMA ADD ]
expr1 -> expr1 . MUL expr1 [ WITH THEN SUB SEMI RSQUARE RPAREN PIPE MUL LT IN EQ EOF END ELSE DOUBLE_SEMI DOUBLE_COLON DIV COMMA ADD ]
expr1 -> expr1 . DIV expr1 [ WITH THEN SUB SEMI RSQUARE RPAREN PIPE MUL LT IN EQ EOF END ELSE DOUBLE_SEMI DOUBLE_COLON DIV COMMA ADD ]
expr1 -> expr1 . EQ expr1 [ WITH THEN SUB SEMI RSQUARE RPAREN PIPE MUL LT IN EQ EOF END ELSE DOUBLE_SEMI DOUBLE_COLON DIV COMMA ADD ]
expr1 -> expr1 . LT expr1 [ WITH THEN SUB SEMI RSQUARE RPAREN PIPE MUL LT IN EQ EOF END ELSE DOUBLE_SEMI DOUBLE_COLON DIV COMMA ADD ]
expr1 -> expr1 . DOUBLE_COLON expr1 [ WITH THEN SUB SEMI RSQUARE RPAREN PIPE MUL LT IN EQ EOF END ELSE DOUBLE_SEMI DOUBLE_COLON DIV COMMA ADD ]
expr1 -> expr1 DOUBLE_COLON expr1 . [ WITH THEN SUB SEMI RSQUARE RPAREN PIPE MUL LT IN EQ EOF END ELSE DOUBLE_SEMI DOUBLE_COLON DIV COMMA ADD ]
## Transitions:
-- On SUB shift to state 21
-- On MUL shift to state 23
-- On DOUBLE_COLON shift to state 29
-- On DIV shift to state 25
-- On ADD shift to state 31
## Reductions:
-- On WITH THEN SEMI RSQUARE RPAREN PIPE LT IN EQ EOF END ELSE DOUBLE_SEMI COMMA
--   reduce production expr1 -> expr1 DOUBLE_COLON expr1

State 31:
## Known stack suffix:
## expr1 ADD
## LR(1) items:
expr1 -> expr1 ADD . expr1 [ WITH THEN SUB SEMI RSQUARE RPAREN PIPE MUL LT IN EQ EOF END ELSE DOUBLE_SEMI DOUBLE_COLON DIV COMMA ADD ]
## Transitions:
-- On LSQUARE shift to state 2
-- On LPAREN shift to state 3
-- On LOWER_IDENT shift to state 4
-- On INT shift to state 10
-- On BOOL shift to state 15
-- On expr3 shift to state 17
-- On expr2 shift to state 18
-- On expr1 shift to state 32
## Reductions:

State 32:
## Known stack suffix:
## expr1 ADD expr1
## LR(1) items:
expr1 -> expr1 . ADD expr1 [ WITH THEN SUB SEMI RSQUARE RPAREN PIPE MUL LT IN EQ EOF END ELSE DOUBLE_SEMI DOUBLE_COLON DIV COMMA ADD ]
expr1 -> expr1 ADD expr1 . [ WITH THEN SUB SEMI RSQUARE RPAREN PIPE MUL LT IN EQ EOF END ELSE DOUBLE_SEMI DOUBLE_COLON DIV COMMA ADD ]
expr1 -> expr1 . SUB expr1 [ WITH THEN SUB SEMI RSQUARE RPAREN PIPE MUL LT IN EQ EOF END ELSE DOUBLE_SEMI DOUBLE_COLON DIV COMMA ADD ]
expr1 -> expr1 . MUL expr1 [ WITH THEN SUB SEMI RSQUARE RPAREN PIPE MUL LT IN EQ EOF END ELSE DOUBLE_SEMI DOUBLE_COLON DIV COMMA ADD ]
expr1 -> expr1 . DIV expr1 [ WITH THEN SUB SEMI RSQUARE RPAREN PIPE MUL LT IN EQ EOF END ELSE DOUBLE_SEMI DOUBLE_COLON DIV COMMA ADD ]
expr1 -> expr1 . EQ expr1 [ WITH THEN SUB SEMI RSQUARE RPAREN PIPE MUL LT IN EQ EOF END ELSE DOUBLE_SEMI DOUBLE_COLON DIV COMMA ADD ]
expr1 -> expr1 . LT expr1 [ WITH THEN SUB SEMI RSQUARE RPAREN PIPE MUL LT IN EQ EOF END ELSE DOUBLE_SEMI DOUBLE_COLON DIV COMMA ADD ]
expr1 -> expr1 . DOUBLE_COLON expr1 [ WITH THEN SUB SEMI RSQUARE RPAREN PIPE MUL LT IN EQ EOF END ELSE DOUBLE_SEMI DOUBLE_COLON DIV COMMA ADD ]
## Transitions:
-- On MUL shift to state 23
-- On DIV shift to state 25
## Reductions:
-- On WITH THEN SUB SEMI RSQUARE RPAREN PIPE LT IN EQ EOF END ELSE DOUBLE_SEMI DOUBLE_COLON COMMA ADD
--   reduce production expr1 -> expr1 ADD expr1

State 33:
## Known stack suffix:
## expr1 EQ
## LR(1) items:
expr1 -> expr1 EQ . expr1 [ WITH THEN SUB SEMI RSQUARE RPAREN PIPE MUL LT IN EQ EOF END ELSE DOUBLE_SEMI DOUBLE_COLON DIV COMMA ADD ]
## Transitions:
-- On LSQUARE shift to state 2
-- On LPAREN shift to state 3
-- On LOWER_IDENT shift to state 4
-- On INT shift to state 10
-- On BOOL shift to state 15
-- On expr3 shift to state 17
-- On expr2 shift to state 18
-- On expr1 shift to state 34
## Reductions:
